405-linkerd/linkerd-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: linkerd-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/upstream-vhost: web.linkerd-viz.svc.cluster.local:8084
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Origin "";
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
  namespace: linkerd-viz
spec:
  tls:
    - hosts:
        - linkerd-dashboard.workshop.metakube.org
      secretName: linkerd-dashboard-tls-cert
  rules:
    - host: linkerd-dashboard.workshop.metakube.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8084
